09-Congresofossf/01-congresofoss-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: congresofoss-v1
  namespace: congresofoss-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: congresofoss-v1
  template:
    metadata:
      labels:
        app: congresofoss-v1
    spec:
      containers:
      - name: congresofoss
        #image: congresofosscr.azurecr.io/congresofoss:latest
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"

---

kind: Service
apiVersion: v1
metadata:
  name: congresofoss-v1-svc
  namespace: congresofoss-namespace
spec:
  selector:
    app: congresofoss-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
