09-Congresofossf/02-congresofoss-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-congresofoss
spec:
  ingressClassName: nginx
  rules:
  - host: welcome.congresofoss.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: congresofoss-v1-svc
            port: 
              number: 80
