09-Congresofossf/04-congresofoss-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-congresofoss
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - welcome.congresofoss.com
    secretName: welcome-tls
  rules:
  - host: welcome.congresofoss.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome-v1-svc
            port: 
              number: 80
